--- a/contact.html
+++ b/contact.html
@@ -4,55 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
     <header class="header">
         <div class="header-div obj-width">
-            <img src="../assets/logo.png" alt="JStack Image">
+            <img src="./assets/logo.png" alt="JStack Image">
             <div class="horizontal-links">
-                <a href="../index.html" class="hide-on-mobile">Home</a>
-                <a href="#" class="hide-on-mobile">Browse Jobs</a>
-                <a href="../contact.html" class="hide-on-mobile">Contact</a>
+                <a href="index.html" class="hide-on-mobile">Home</a>
+                <a href="jobs/job.html" class="hide-on-mobile">Browse Jobs</a>
+                <a href="" class="hide-on-mobile">Contact</a>
                 <button class="w-btn hide-on-mobile">Join</button>
                 <button class="menu" onclick="showSidebar()"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></button>
             </div>
             <div class="vertical-links">
                 <button class="g-btn" onclick="closeSidebar()"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></button>
-                <a href="../index.html">Home</a>
-                <a href="#">Browse Jobs</a>
-                <a href="../contact.html">Contact</a>
+                <a href="#">Home</a>
+                <a href="jobs/job.html">Browse Jobs</a>
+                <a href="">Contact</a>
                 <button class="g-btn">Join</button>
             </div>
         </div>
     </header>
 
-     <!-- Job section -->
-     <section class="job-section obj-width top-space">
-        <h2>Jobs in demand</h2>   
-        <p>Most viewed and all time top selling services</p>
-
-        <div class="search-bar">
-            <p><svg xmlns="http://www.w3.org/2000/svg" height="22px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"/></svg></p>
-            <input type="text" id="search-input" name="" placeholder="Search Jobs">
+    <section class="contact-form obj-width top-space">
+        <div class="contact-left">
+            <h2>Get in touch</h2>
+            <p>Most viewed and all-time top selling service.</p>
+            <img src="./assets/contact.svg" alt="">
         </div>
+        <div class="contact-right">
+            <form action="">
+                <label for="name">Name:</label>
+                <input type="text" name="" id="" required autocomplete="off">
 
-        <div class="job-lists top-medium-space">
+                <label for="name">Email:</label>
+                <input type="email" name="" id="" required autocomplete="off">
+
+                <label for="name">Message:</label>
+                <textarea name="" id="" rows="5"></textarea>
+
+                <input type="submit" value="Submit" class="g-btn">
+            </form>
         </div>
-     </section>
+    </section>
+
+    <section class="map obj-width top-space">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3719.57660799321!2d72.79046887493058!3d21.20897188156529!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04c2547141c57%3A0x2701efcb8212165!2sSmt.%20I.%20N.%20Tekrawala%20High%20School.!5e0!3m2!1sen!2sin!4v1743334994017!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
 
       <!-- Footer Section -->
        <section class="footer-section">
         <div class="social-section obj-width top-medium-space">
             <div class="social-left">
-                <img src="../assets/logo.png" alt="">
+                <img src="./assets/logo.png" alt="">
                 <p>Search your desired jobs</p>
             </div>
             <div class="social-right">
-                <img src="../assets/facebook.png" alt="">
-                <img src="../assets/instagram.png" alt="">
-                <img src="../assets/linkedin.png" alt="">
+                <img src="./assets/facebook.png" alt="">
+                <img src="./assets/instagram.png" alt="">
+                <img src="./assets/linkedin.png" alt="">
             </div>
         </div>
         <div class="footer-links obj-width">
@@ -88,8 +100,6 @@
        </section>
 
 </body>
-<script src="../app.js"></script>
-<script src="../job-filter.js"></script>
-<script src="./jobs-data.js"></script>
-<script src="./jobsearch.js"></script>
+<script src="app.js"></script>
+<script src="job-filter.js"></script>
 </html>
