--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="horizontal-links">
                 <a href="#" class="hide-on-mobile">Home</a>
                 <a href="jobs/job.html" class="hide-on-mobile">Browse Jobs</a>
-                <a href="" class="hide-on-mobile">Contact</a>
+                <a href="./contact.html" class="hide-on-mobile">Contact</a>
                 <button class="w-btn hide-on-mobile">Join</button>
                 <button class="menu" onclick="showSidebar()"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></button>
             </div>
@@ -22,7 +22,7 @@
                 <button class="g-btn" onclick="closeSidebar()"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></button>
                 <a href="#">Home</a>
                 <a href="jobs/job.html">Browse Jobs</a>
-                <a href="">Contact</a>
+                <a href="./contact.html">Contact</a>
                 <button class="g-btn">Join</button>
             </div>
         </div>
